[package]
name = "ruuvi-rust-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd"] } 
futures-util = "0.3.31"
hex = "0.4.3"
rumqttc = "0.24.0"
serde  = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.5"
